# bevy_ifc

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  parse_ifc.rs  query_entities.rs  resources.rs  spawn_entity.rs
test/python/: ifcopenshell_main.py  parse.py
