[package]
name = "bevy_ifc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_panorbit_camera = "0.10.0"



# Enable max optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
